--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,7 +6,7 @@
 @import "PokeDetails.scss";
 @import "Loader.scss";
 
-@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
+// @import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
 
 * {
 	font-family: "Press Start 2P";
