--- a/src/styles/PokeHome.scss
+++ b/src/styles/PokeHome.scss
@@ -1,6 +1,6 @@
 .mainDiv {
 	padding: 1.5rem;
-	background-image: url("../img/118Z_2012.w017.n001.334B.p15.334.jpg");
+	background-image: url("../img/1920x1080.png");
 	background-position: center;
 	background-size: cover;
 	height: 100vh;
