--- a/src/styles/AllPoke.scss
+++ b/src/styles/AllPoke.scss
@@ -2,7 +2,7 @@
 	padding: 1.5rem;
 	height: 100vh;
 	width: 100%;
-	background-image: url("../img/118Z_2012.w017.n001.334B.p15.334.jpg");
+	background-image: url("../img/1920x1080.png");
 	background-position: center;
 	background-size: cover;
 	overflow: hidden;
