--- a/src/styles/PokeHome.scss
+++ b/src/styles/PokeHome.scss
@@ -115,20 +115,24 @@
 }
 
 .pokeAttribute {
-	margin-top: 10rem;
+	// margin-top: 10rem;
+	position: absolute;
+	bottom: 10px;
+	// display: flex;
+	// justify-content: center;
+
 	a {
 		text-decoration: none;
-		transition: .5s ease-in-out;
+		transition: 0.5s ease-in-out;
 		color: aliceblue;
 	}
 	p {
 		margin-top: -1.5rem;
 		color: aliceblue;
 		margin-left: 80rem;
-		a:hover{	
+		a:hover {
 			text-decoration: underline;
 			color: aqua;
-
 		}
 	}
 }
